maybe fix visible editor issue

--- a/src/hesh.less
+++ b/src/hesh.less
@@ -259,7 +259,7 @@
 
 		// BUTTON TYPES
 		&__button{
-			&:active{ transform:none !important; }
+			&:active{ transform: none !important; }
 			position: relative;
 			select, input{
 				display: block;
@@ -308,11 +308,11 @@
 
 	&-mirrored{ // the textarea CodeMirror is mirroring
 		display: block !important; // so that focus still works in all browsers
-		position: fixed;
-		left: -9999px;
-		top: -9999px;
-		z-index: -999;
-		opacity: 0;
+		position: fixed !important;
+		left: -9999px !important;
+		top: -9999px !important;
+		z-index: -999 !important;
+		opacity: 0 !important;
 	}
 
 
